Fix layout and sizing on mobile

--- a/app/assets/stylesheets/modules/signals-page.scss
+++ b/app/assets/stylesheets/modules/signals-page.scss
@@ -5,19 +5,8 @@
   font-size: 16px;
 
   &__col {
-    &--vertical-center {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    &--horizontal-center {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+    width: 100%;
   }
-
   &__title {
     margin-bottom: 40px;
     font-size: 27px;
@@ -48,6 +37,18 @@
     color: white;
   }
 }
+.signals-section-content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  &--center {
+    align-items: center;
+  }
+}
 
 .featured-signals-section {
   &__title {
@@ -72,6 +73,7 @@
 }
 
 .telegram-message {
+  text-align: left;
   margin-bottom: 16px;
   padding: 16px;
   background: #e8e7ea;
@@ -133,11 +135,43 @@
 }
 
 .signal-example-panels {
+  text-align: left;
+
   &__item {
     margin-bottom: 20px;
   }
 }
 
+.signal-team-members {
+  width: 100%;
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .signal-faqs {
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .signals-section {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .signals-section-content {
+    text-align: center;
+    align-items: center;
+    padding-bottom: 64px;
+
+    &--xs-last {
+      padding-bottom: 0;
+    }
+  }
+  .signal-highlight-list {
+    align-self: flex-start;
+    text-align: left;
+  }
 }
